# spacey

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: interpreter.rs  parser.rs  vm.rs
resources/: interpret_io.ws  interpret_stack.ws  parse_arithmetic.ws  parse_flow.ws  parse_stack.ws  sieve.ws  truth_machine.ws
resources/ws/: knots.ws  parse_heap.ws
src/: bf.rs  ir.rs  lib.rs  main.rs  parser.rs  vm.rs  ws.rs
src/interpret/: interpreter.rs  mod.rs
src/interpreter/: interpreter.rs  mod.rs
src/parse/: parser.rs
src/parser/: mod.rs  parser.rs
src/ws/: mod.rs  parser.rs  vm.rs
src/ws/parser/: mod.rs
src/ws/vm/: mod.rs  vm.rs
ws/: arithmetic.ws  cat.ws  count.ws  fibonacci.ws  hello_world.ws  hello_world_of_spaces.ws  interpret_arithmetic.ws  interpret_flow.ws  interpret_heap.ws  interpret_stack.ws  parse_flow.ws  parse_heap.ws  parse_io.ws  primes.ws  push_stack.ws  sieve.ws  stack.ws  towers_of_hanoi.ws  truth_machine.ws
