[package]
name = "spacey"
version = "1.1.0"
edition = "2021"
description = "a tiny yet performant whitespace vmm/interpreter"
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/spacey"
repository = "https://github.com/D3PSI/spacey"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.5"

[dependencies]
clap = "3.2.5"
memmap = "0.7.0"
getch = "0.3.1"

[[bench]]
name = "interpreter"
harness = false

[[bench]]
name = "parser"
harness = false
