[package]
name = "spacey"
version = "1.2.0"
edition = "2021"
description = "a tiny yet performant whitespace vmm/interpreter"
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/spacey"
repository = "https://github.com/D3PSI/spacey"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
wasm-bindgen-test = "0.3.13"

#[profile.release]
#opt-level = "s"

[dependencies]
clap = "3.2.5"
wasm-bindgen = "0.2.83"

[[bench]]
name = "vm"
harness = false

[[bench]]
name = "parser"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = "0.7.0"
getch = "0.3.1"

